--- a/public/index.html
+++ b/public/index.html
@@ -29,7 +29,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
     />
-    <title>React App</title>
+    <title>Sistema de Tickets</title>
     <script id="react-dotenv" src="./env.js"></script>
   </head>
   <body>
